shape图形分组ＵＩ修改

--- a/IOSShape/IOSShape-Info.plist
+++ b/IOSShape/IOSShape-Info.plist
@@ -87,5 +87,9 @@
 	<true/>
 	<key>UIViewGroupOpacity</key>
 	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
